# rustblockchain

./: .gitignore  Cargo.toml  README.md
config/: node.toml
contracts/bridge/: Cargo.toml
contracts/bridge/src/: lib.rs
contracts/sdk/: Cargo.toml
contracts/sdk/src/: lib.rs
contracts/token/: Cargo.toml
contracts/token/src/: lib.rs
crates/api/: Cargo.toml
crates/api/src/: config.rs  dto.rs  error.rs  lib.rs  metrics.rs  server.rs
crates/api/src/middleware/: auth.rs  mod.rs  rate_limit.rs
crates/api/src/routes/: accounts.rs  blocks.rs  bridge.rs  chain.rs  contracts.rs  health.rs  mod.rs  receipts.rs  transactions.rs  validators.rs  wallet.rs
crates/api/src/ws/: handler.rs  mod.rs
crates/api/static/: index.html
crates/bridge/: Cargo.toml
crates/bridge/src/: error.rs  htlc.rs  lib.rs  registry.rs  relay.rs  state.rs  types.rs  validator.rs
crates/bridge/src/chains/: bitcoin.rs  ethereum.rs  mod.rs  solana.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: engine.rs  error.rs  finality.rs  lib.rs  pos.rs  slashing.rs  state.rs  tx_pool.rs
crates/core/: Cargo.toml
crates/core/src/: account.rs  block.rs  config.rs  epoch.rs  error.rs  genesis.rs  lib.rs  receipt.rs  transaction.rs  types.rs  validator.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: address.rs  error.rs  hash.rs  keypair.rs  keystore.rs  lib.rs  merkle.rs  mnemonic.rs
crates/network/: Cargo.toml
crates/network/src/: config.rs  error.rs  lib.rs  messages.rs  service.rs
crates/node/: Cargo.toml
crates/node/src/: app.rs  config.rs  main.rs
crates/storage/: Cargo.toml
crates/storage/src/: batch.rs  block_store.rs  columns.rs  db.rs  error.rs  lib.rs  state_store.rs  tx_store.rs  validator_store.rs
crates/vm/: Cargo.toml
crates/vm/src/: context.rs  engine.rs  error.rs  gas.rs  lib.rs
crates/wallet/: Cargo.toml
crates/wallet/src/: client.rs  main.rs
crates/wallet/src/commands/: account.rs  contract.rs  mod.rs  query.rs  stake.rs  transfer.rs
deploy/docker/: Dockerfile  docker-compose.yml
deploy/k8s/: configmap.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml  statefulset.yaml
deploy/k8s/monitoring/: prometheus.yml
deploy/scripts/: genesis-gen.sh
docs/: API.md  BRIDGE.md
