[workspace]
resolver = "2"
members = [
    "crates/crypto",
    "crates/core",
    "crates/storage",
    "crates/vm",
    "crates/consensus",
    "crates/network",
    "crates/api",
    "crates/node",
    "crates/wallet",
    "contracts/sdk",
    "contracts/token",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

# Cryptography
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
blake3 = "1"
rand = "0.8"
rand_chacha = "0.3"
zeroize = { version = "1", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
toml = "0.8"
hex = { version = "0.4", features = ["serde"] }
base64 = "0.22"
bytes = "1"

# Networking
libp2p = { version = "0.54", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "gossipsub",
    "kad",
    "identify",
    "mdns",
    "ping",
    "request-response",
    "macros",
    "dns",
    "serde",
] }

# Web
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "limit"] }
jsonwebtoken = "9"
hyper = { version = "1", features = ["full"] }

# WASM VM
wasmtime = "27"

# Storage
rocksdb = { version = "0.22", default-features = false, features = ["snappy"] }

# Logging / Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
prometheus = "0.13"

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"

# Wallet / Key derivation
bip39 = "2"
hkdf = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
scrypt = "0.11"

# Misc
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
parking_lot = "0.12"
futures = "0.3"
async-trait = "0.1"
derive_more = { version = "1", features = ["display", "from"] }

# TLS
rustls = "0.23"
rustls-pemfile = "2"
tokio-rustls = "0.26"
rcgen = "0.13"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = 2
