[package]
name = "rustchain-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustchain-crypto = { path = "../crypto" }
rustchain-core = { path = "../core" }
rustchain-storage = { path = "../storage" }
rustchain-consensus = { path = "../consensus" }
rustchain-network = { path = "../network" }
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
bincode.workspace = true
thiserror.workspace = true
tracing.workspace = true
jsonwebtoken.workspace = true
prometheus.workspace = true
uuid.workspace = true
chrono.workspace = true
dashmap.workspace = true
futures.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
tokio-rustls.workspace = true
async-trait.workspace = true
hyper.workspace = true
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2"] }
parking_lot.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
reqwest.workspace = true
tempfile = "3"
