[package]
name = "rustchain-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustchain-crypto = { path = "../crypto" }
rustchain-core = { path = "../core" }
rustchain-storage = { path = "../storage" }
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
bincode.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
tokio.workspace = true
async-trait.workspace = true
sha2.workspace = true
blake3.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
