[package]
name = "rustchain-consensus"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustchain-crypto = { path = "../crypto" }
rustchain-core = { path = "../core" }
rustchain-storage = { path = "../storage" }
rustchain-vm = { path = "../vm" }
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
bincode.workspace = true
thiserror.workspace = true
tracing.workspace = true
rand.workspace = true
rand_chacha.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
async-trait.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
