[package]
name = "rustchain-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rustchain-crypto = { path = "../crypto" }
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
chrono.workspace = true
thiserror.workspace = true
bytes.workspace = true
hex.workspace = true
toml.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
