[package]
name = "rustchain-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ed25519-dalek.workspace = true
blake3.workspace = true
rand.workspace = true
zeroize.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
thiserror.workspace = true
bip39.workspace = true
hkdf.workspace = true
sha2.workspace = true
aes-gcm.workspace = true
scrypt.workspace = true
bincode.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
