[package]
name = "rustchain-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rustchain"
path = "src/main.rs"

[dependencies]
rustchain-crypto = { path = "../crypto" }
rustchain-core = { path = "../core" }
rustchain-storage = { path = "../storage" }
rustchain-vm = { path = "../vm" }
rustchain-consensus = { path = "../consensus" }
rustchain-network = { path = "../network" }
rustchain-api = { path = "../api" }
tokio.workspace = true
tokio-util.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
anyhow.workspace = true
dialoguer.workspace = true
